--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -132,3 +132,11 @@
 .span-color{
     color: blue;
 }
+.people-list div{
+    max-width: 400px;
+    display: inline-block;
+    margin: auto;
+}
+.people-list div img{
+    max-width: 300px;
+}
