--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,10 +88,10 @@
 
 .pg-thumb{
     display: inline-block;
-    margin: auto;
+    margin: 20px 10px;
     width: 300px;
     height: 300px;
-    padding: 0px;
+    padding: 10px;
 }
 .pg-container{
     max-width: 1000px;
